# syncfield-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: meta_quest_camera_hardware_qa.md
docs/plans/: 2026-04-13-opencv-to-pyav-migration-hw-smoketest.md  2026-04-13-opencv-to-pyav-migration.md
docs/superpowers/plans/: 2026-04-09-generic-sensor-stream-helpers.md  2026-04-09-replay-viewer.md  2026-04-13-metaquest-stereo-camera-python.md  2026-04-14-insta360-go3s-adapter.md  2026-04-22-health-telemetry.md  2026-04-22-partial-connect-ux.md  2026-04-23-recording-anchor-metadata.md
docs/superpowers/specs/: 2026-04-09-generic-sensor-stream-helpers-design.md  2026-04-09-replay-viewer-design.md  2026-04-10-sync-review-design.md  2026-04-10-web-viewer-migration-design.md  2026-04-11-host-audio-capture-design.md  2026-04-13-metaquest-stereo-camera-design.md  2026-04-14-insta360-go3s-adapter-design.md  2026-04-22-health-telemetry-design.md  2026-04-22-partial-connect-ux-design.md
examples/: README.md
examples/full_rig/: README.md  record.py
examples/generic_sensor_demo/: README.md  polling_serial.py  push_async.py
examples/insta360_go3s/: README.md  record.py
examples/iphone_mac_webcam/: README.md  record.py
examples/mac_iphone_dual_oak/: README.md  record.py
examples/meta_quest/: README.md  record.py
examples/multihost_lab/: README.md  follower.py  leader.py
scripts/: e2e_chirp_check.py
scripts/multihost_local_cluster/: README.md  diagnose_browser.py  follower.py  launch_cluster.sh  leader.py
src/syncfield/: __init__.py  capture.py  clock.py  orchestrator.py  roles.py  stream.py  testing.py  tone.py  types.py  writer.py
src/syncfield/adapters/: __init__.py  _generic.py  _video_encoder.py  ble_imu.py  ble_imu_profiles.py  host_audio.py  jsonl_file.py  meta_quest.py  oak_camera.py  oglo_tactile.py  polling_sensor.py  push_sensor.py  uvc_webcam.py
src/syncfield/adapters/insta360_go3s/: __init__.py  stream.py
src/syncfield/adapters/meta_quest_camera/: __init__.py  file_puller.py  http_client.py  mp4_writer.py  preview.py  stream.py  timestamps.py
src/syncfield/discovery/: __init__.py  __main__.py  _ble.py  _id_gen.py  registry.py  scanner.py  types.py
src/syncfield/health/: __init__.py  detector.py  registry.py  severity.py  system.py  tracker.py  types.py  worker.py
src/syncfield/health/detectors/: adapter_passthrough.py  backpressure.py  depthai_bridge.py  fps_drop.py  jitter.py  no_data.py  startup_failure.py  stream_stall.py
src/syncfield/multihost/: __init__.py  _dns_sd_fallback.py  advertiser.py  browser.py  errors.py  naming.py  session_config.py  types.py
src/syncfield/multihost/control_plane/: __init__.py  _port_binding.py  auth.py  routes.py  schemas.py  server.py
src/syncfield/replay/: __init__.py  __main__.py  _handler.py  loader.py  server.py
src/syncfield/replay/_web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
src/syncfield/replay/static/: index.html
src/syncfield/viewer/: __init__.py  app.py  demo.py  fonts.py  formatting.py  poller.py  server.py  state.py  theme.py
src/syncfield/viewer/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/syncfield/viewer/widgets/: __init__.py  discovery_modal.py  layout.py  stream_card.py
tests/: test_capture.py  test_types.py  test_writer.py
tests/helpers/: fake_quest_server.py  test_fake_quest_server.py
tests/integration/: test_anchor_sharing.py  test_generic_sensor_e2e.py  test_multihost_rendezvous.py  test_round_trip.py
tests/integration/adapters/: test_meta_quest_camera_e2e.py  test_polling_sensor_threading.py  test_push_sensor_threading.py  test_remux_h264_to_mp4.py
tests/integration/health/: test_no_data_detector.py  test_orchestrator_health_integration.py  test_partial_connect.py
tests/integration/insta360_go3s/: test_aggregation_during_recording.py  test_atomic_failure.py  test_session_e2e.py
tests/unit/: conftest.py  test_chirp_emission.py  test_clock.py  test_collect_from_followers.py  test_collect_from_followers_e2e.py  test_config_distribution_e2e.py  test_control_plane_e2e.py  test_control_plane_no_lock_deadlock.py  test_fake_stream.py  test_finalization_jitter.py  test_multi_episode.py  test_orchestrator.py  test_orchestrator_anchor.py  test_orchestrator_auto_audio.py  test_orchestrator_chirp_mode.py  test_orchestrator_config_distribution.py  test_orchestrator_control_plane_integration.py  test_orchestrator_go3s_policy_downgrade.py  test_orchestrator_multihost_audio_requirement.py  test_orchestrator_multihost_layout.py  test_orchestrator_partial_connect.py  test_public_api.py  test_roles.py  test_sdk_contracts.py  test_stream.py  test_stream_base.py  test_tone.py  test_types.py  test_types_capabilities.py  test_types_finalization.py  test_viewer_aggregation_commands.py  test_viewer_aggregation_snapshot.py  test_writer.py
tests/unit/adapters/: conftest.py  test_ble_imu.py  test_discover_ble.py  test_discover_oak_camera.py  test_discover_uvc_webcam.py  test_generic_internals.py  test_host_audio.py  test_jsonl_file.py  test_meta_quest.py  test_oak_camera.py  test_oak_camera_health.py  test_oglo_tactile.py  test_polling_sensor.py  test_push_sensor.py  test_uvc_webcam.py  test_video_encoder.py
tests/unit/adapters/insta360_go3s/: test_aggregation_queue.py  (+6 more)
tests/unit/discovery/: test_id_gen.py  test_scanner.py  test_types.py
tests/unit/health/: test_detector_base.py  test_health_system.py  test_health_worker.py  test_incident_tracker.py  test_incident_types.py  test_registry.py  test_severity.py
tests/unit/multihost/: test_advertiser.py  test_advertiser_unique_names.py  test_browser.py  test_dns_sd_fallback.py  test_naming.py  test_session_config.py  test_types.py
tests/unit/replay/: conftest.py  test_handler.py  test_launch_smoke.py  test_loader.py  test_server.py
tests/unit/viewer/: test_cluster_endpoints.py  test_episode_api.py  test_formatting.py  test_poller.py  test_snapshot_incidents.py  test_state.py
(+126 files in other folders)
