[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncfield"
version = "0.3.1"
description = "Multi-modal capture orchestration framework with precision sync for Physical AI data collection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "OpenGraph Labs" }]
keywords = ["synchronization", "timestamp", "multi-camera", "robotics", "data-collection", "physical-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# sounddevice.play() internally requires numpy even when the caller hands it
# Python lists, so numpy is part of the audio extra.
audio = [
    "sounddevice>=0.4.6",
    "numpy>=1.21",
]
uvc = ["opencv-python>=4.5"]
ble = ["bleak>=0.21"]
# OakCameraStream uses depthai v3 for the pipeline and reuses the `uvc`
# extra's opencv-python for the MP4 writer. Install `syncfield[oak,uvc]`
# (or `syncfield[all]`) for the full OAK capture path.
oak = ["depthai>=3.0.0"]
# The web viewer uses FastAPI + uvicorn and opens a browser tab.
# opencv-python is needed for MJPEG encoding of video frames.
viewer = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "opencv-python>=4.8.0",
]
# mDNS-based multi-host session rendezvous (syncfield.multihost). Required
# only when you want a leader/follower session discovered automatically
# on the local network — single-host sessions do not need this.
multihost = [
    "zeroconf>=0.130",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]
all = [
    "sounddevice>=0.4.6",
    "numpy>=1.21",
    "opencv-python>=4.8.0",
    "bleak>=0.21",
    "depthai>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "zeroconf>=0.130",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://opengraphlabs.com/"
Repository = "https://github.com/OpenGraphLabs/syncfield-python"
Documentation = "https://github.com/OpenGraphLabs/syncfield-python#readme"
Issues = "https://github.com/OpenGraphLabs/syncfield-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/syncfield"]

[tool.hatch.build.targets.wheel.force-include]
"src/syncfield/viewer/static" = "syncfield/viewer/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "hardware: tests that require physical hardware (cameras, BLE devices)",
    "slow: integration tests that touch real IO (mDNS sockets, filesystem, etc.)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.12.0",
]
