[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncfield"
version = "0.3.13"
description = "Multi-modal capture orchestration framework with precision sync for Physical AI data collection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "OpenGraph Labs" }]
keywords = ["synchronization", "timestamp", "multi-camera", "robotics", "data-collection", "physical-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# sounddevice.play() internally requires numpy even when the caller hands it
# Python lists, so numpy is part of the audio extra.
audio = [
    "sounddevice>=0.4.6",
    "numpy>=1.21",
]
uvc = ["av>=12.0.0"]
ble = ["bleak>=0.21"]
# OakCameraStream uses depthai v3 for the pipeline and PyAV for the MP4
# writer. Install `syncfield[oak]` for the full OAK capture path.
oak = ["depthai>=3.0.0", "av>=12.0.0"]
# The web viewer uses FastAPI + uvicorn and opens a browser tab.
# PyAV handles MJPEG encoding of video frames; Pillow is used for still
# image conversions.
viewer = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "av>=12.0.0",
    "Pillow>=10.0.0",
]
# mDNS-based multi-host session rendezvous (syncfield.multihost). Required
# only when you want a leader/follower session discovered automatically
# on the local network — single-host sessions do not need this.
multihost = [
    "zeroconf>=0.130",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]
all = [
    "sounddevice>=0.4.6",
    "numpy>=1.21",
    "av>=12.0.0",
    "Pillow>=10.0.0",
    "bleak>=0.21",
    "depthai>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "zeroconf>=0.130",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://opengraphlabs.com/"
Repository = "https://github.com/OpenGraphLabs/syncfield-python"
Documentation = "https://github.com/OpenGraphLabs/syncfield-python#readme"
Issues = "https://github.com/OpenGraphLabs/syncfield-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/syncfield"]

[tool.hatch.build.targets.wheel.force-include]
"src/syncfield/viewer/static" = "syncfield/viewer/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "hardware: tests that require physical hardware (cameras, BLE devices)",
    "slow: integration tests that touch real IO (mDNS sockets, filesystem, etc.)",
    "real_multihost: opt out of the unit-conftest patch that no-ops SessionOrchestrator._bring_multihost_online — use when the test needs the real control plane / advertiser / browser",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
]
