[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncfield"
version = "0.3.24"
description = "Multi-modal capture orchestration framework with precision sync for Physical AI data collection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "OpenGraph Labs" }]
keywords = ["synchronization", "timestamp", "multi-camera", "robotics", "data-collection", "physical-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Default install ships the canonical first-run stack: a UVC webcam adapter,
# the browser viewer, and the sounddevice-backed chirp / countdown player
# (so the 3/2/1 ticks and start/stop chirps are audible out of the box).
# Heavier / platform-specific adapters (BLE, OAK, off-host cameras,
# multi-host control plane) stay opt-in via the optional-dependencies
# block below.
dependencies = [
    "av>=12.0.0",
    "numpy>=1.21",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "Pillow>=10.0.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
ble = ["bleak>=0.21"]
# OakCameraStream uses depthai v3 for the pipeline and PyAV for the MP4
# writer (also via _video_encoder, hence numpy). Install `syncfield[oak]`
# for the full OAK capture path.
oak = ["depthai>=3.0.0", "av>=12.0.0", "numpy>=1.21"]
# mDNS-based multi-host session rendezvous (syncfield.multihost). Required
# only when you want a leader/follower session discovered automatically
# on the local network — single-host sessions do not need this.
multihost = [
    "zeroconf>=0.130",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]
# Camera adapters that talk to off-host cameras:
#   * Insta360 Go3S — BLE trigger via bleak + WiFi/OSC HTTP via aiohttp.
#   * MetaQuestCameraStream — stereo passthrough over HTTP via httpx to
#     the SyncField Quest Sender companion app; pulls the on-device
#     recorded MP4 + timestamps JSONL after stop_recording().
camera = [
    "bleak>=0.21",
    "aiohttp>=3.9",
    "httpx>=0.25.0",
    "zeroconf>=0.130",
]
all = [
    "bleak>=0.21",
    "aiohttp>=3.9",
    "depthai>=3.0.0",
    "zeroconf>=0.130",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://opengraphlabs.com/"
Repository = "https://github.com/OpenGraphLabs/syncfield-python"
Documentation = "https://github.com/OpenGraphLabs/syncfield-python#readme"
Issues = "https://github.com/OpenGraphLabs/syncfield-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/syncfield"]
# viewer/frontend/ is the React/TypeScript build *input* (vite + .tsx +
# package.json + node_modules). The runtime only reads viewer/static/
# (the prebuilt SPA bundle), which is force-included below. Excluding
# the source tree keeps the wheel small and avoids shipping our
# frontend sources through PyPI.
exclude = [
    "src/syncfield/viewer/frontend",
]

[tool.hatch.build.targets.wheel.force-include]
"src/syncfield/viewer/static" = "syncfield/viewer/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "hardware: tests that require physical hardware (cameras, BLE devices)",
    "slow: integration tests that touch real IO (mDNS sockets, filesystem, etc.)",
    "real_multihost: opt out of the unit-conftest patch that no-ops SessionOrchestrator._bring_multihost_online — use when the test needs the real control plane / advertiser / browser",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
]
